--- a/project4/network/templates/network/layout.html
+++ b/project4/network/templates/network/layout.html
@@ -6,7 +6,8 @@
         <title>{% block title %}Social Network{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="{% static 'network/styles.css' %}" rel="stylesheet">
-        <script src="{% static 'network/timeline.js' %}"></script>
+        {% block script %}
+        {% endblock %}
     </head>
     <body>
 
@@ -17,7 +18,7 @@
               <ul class="navbar-nav mr-auto">
                 {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><strong>{{ user.username }}</strong></a>
+                        <a class="nav-link" href="javascript:;" id="click-username" data-username="{{ user.username }}"><strong>{{ user.username }}</strong></a>
                     </li>
                 {% endif %}
                 <li class="nav-item">
@@ -46,5 +47,6 @@
             {% block body %}
             {% endblock %}
         </div>
+        
     </body>
 </html>
