--- a/project4/network/static/network/styles.css
+++ b/project4/network/static/network/styles.css
@@ -9,3 +9,11 @@
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
 }
+
+.username-a {
+    color: black;
+    font-size: 25px;
+}
+.username-a:hover {
+    color: black;
+}
